<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.fragments.VideosFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:elevation="@dimen/dimen_0_dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:theme="@style/ToolbarTheme"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/fragment_saved"
            app:titleTextColor="@color/colorText">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeleteHistory"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="@dimen/dimen_54_dp"
                android:layout_height="@dimen/dimen_54_dp"
                android:contentDescription="@string/download"
                android:layout_gravity="end"
                android:gravity="center"
                android:insetTop="@dimen/dimen_0_dp"
                android:insetRight="@dimen/dimen_0_dp"
                android:insetBottom="@dimen/dimen_0_dp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="27dp"
                app:icon="@mipmap/outline_delete_black_24"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/dimen_0_dp"
                app:iconSize="@dimen/dimen_24_dp"
                app:iconTint="@color/colorText"
                app:rippleColor="@color/colorRipple" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/headline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_16_dp"
                android:text="@string/links_history"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:textColor="@color/colorText"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/headline"
                app:layout_constraintVertical_bias="0.0"
                app:spanCount="2"
                tools:itemCount="3"
                tools:listitem="@layout/recyclerview_item_video_grid" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>