<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dimen_196_dp"
    android:layout_marginStart="@dimen/dimen_8_dp"
    android:layout_marginTop="@dimen/dimen_8_dp"
    android:layout_marginEnd="@dimen/dimen_8_dp"
    android:layout_marginBottom="@dimen/dimen_16_dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:padding="@dimen/dimen_8_dp"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="@dimen/dimen_16_dp"
    app:cardElevation="@dimen/dimen_0_dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDownload"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/download"
            android:gravity="center"
            android:insetTop="@dimen/dimen_0_dp"
            android:insetRight="@dimen/dimen_0_dp"
            android:insetBottom="@dimen/dimen_0_dp"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/dimen_22_dp"
            app:icon="@mipmap/ic_download_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/dimen_0_dp"
            app:iconSize="@dimen/dimen_20_dp"
            app:iconTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@color/colorRipple" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0_dp"
            android:background="@drawable/dropshadow_gradient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/caption" />

        <TextView
            android:id="@+id/caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12_dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="2dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_caption"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12_dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/sample_date"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>