<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".views.fragments.Home">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnView"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font_medium"
        android:gravity="center"
        android:padding="@dimen/dimen_0_dp"
        android:text="@string/btn_view"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/colorAccent"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="@dimen/dimen_6_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dp"
        android:background="@color/colorStroke"
        app:layout_constraintTop_toBottomOf="@id/btnView" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawablePadding="@dimen/dimen_8_dp"
        android:fontFamily="@font/lobster_two"
        android:padding="@dimen/dimen_16_dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/til_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:boxBackgroundMode="none"
        app:endIconMode="clear_text"
        app:endIconTint="@color/colorText"
        app:hintAnimationEnabled="true"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/btnDownload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_copy_link"
            style="@style/TextInputAppearanceSecondary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edittext"
            android:ellipsize="end"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/ed_hint_url"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:padding="@dimen/dimen_12_dp"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textSize="14sp"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDownload"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/dimen_0_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/dimen_16_dp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="@dimen/dimen_16_dp"
        android:text="@string/btn_download"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/colorText"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="@dimen/dimen_8_dp"
        app:icon="@mipmap/ic_download"
        app:iconGravity="textStart"
        app:iconSize="@dimen/dimen_24_dp"
        app:iconTint="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:rippleColor="@color/colorRipple"
        app:strokeWidth="@dimen/dimen_1_dp"
        app:strokeColor="@color/colorButtonStroke" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1_dp"
        android:background="@color/colorStroke"
        app:layout_constraintBottom_toTopOf="@id/footer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_48_dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:text="Enjoying the app?"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/colorTextHint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text=" Share."
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/message"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>